=== librsvg 2.0.1 ===
	
2002-07-22  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump to 2.0.1

2002-07-09  Alexander Larsson  <alexl@redhat.com>

	* librsvg.spec.in:
	s/@ART_REQUIRED@/@LIBART_REQUIRED@/
	Patch from Pierre Sarrazin <sarrazip@sympatico.ca>

2002-07-01  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Require libart 2.3.10 for bugfix

	* rsvg.c (rsvg_render_bpath):
	Back out michaels workaround, now that the real bug has been fixed.
	The gorilla trashcan still works.

=== librsvg 2.0.0 ===

2002-06-19  Alexander Larsson  <alla@lysator.liu.se>

	* NEWS:
	Add news
	
	* configure.in:
	Bump version to 2.0.0
	Update requirements 

2002-06-08  Michael Meeks  <michael@ximian.com>

	* rsvg.c (rsvg_render_bpath): perturb the 
	close vpath so we don't get numerical stability
	problems.

2002-05-01  Anders Carlsson  <andersca@gnu.org>

	* rsvg.c: (rsvg_handle_close):
	Check for a NULL context in case we haven't called
	rsvg_handle_write to create it. Fixes #80374, reported by
	Jakub Steiner.
	
2002-04-18  Ramiro Estrugo  <ramiro@fateware.com>

	* MAINTAINERS: Removed myself from list.

2002-03-13  Gregory Leblanc  <gleblanc@linuxweasel.com>

	* librsvg.spec.in: rather big rework, from Chris Chabot

	Not sure if that next line belongs or not...

=== librsvg 1.1.6 ===

2002-03-07  Darin Adler  <darin@bentspoon.com>

	* NEWS: News for 1.1.6.
	* configure.in: Bump version.

2002-03-07  Darin Adler  <darin@bentspoon.com>

	* rsvg.c: (rsvg_start_svg): Check for width 0 and height 0
	cases. Make warnings clearer.
	(rsvg_size_callback): Explicitly check for bad width and
	height. Before, we sometimes did math starting with -1 and
	yielding 0, which led to a divide by zero.
	
	* test-71622.svg: New test case.

=== librsvg 1.1.5 ===

2002-03-04  Darin Adler  <darin@bentspoon.com>

	* NEWS: News for 1.1.5.

2002-02-28  Darin Adler  <darin@bentspoon.com>

	* configure.in: Bump version.

2002-02-28  Alexander Larsson  <alla@lysator.liu.se>
